--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,11 @@
 
     <build>
         <plugins>
-            <!-- allows `mvn clean javafx:run` -->
+            <!-- JavaFX Maven plugin (fixed version) -->
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>${javafx.version}</version>
+                <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.eventra.App</mainClass>
                 </configuration>
